<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/product_name"
            android:singleLine="true"
            android:textColorHint="@color/text_hint" />

        <EditText
            android:id="@+id/edtBrand"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/product_brand"
            android:singleLine="true"
            android:textColorHint="@color/text_hint" />

        <EditText
            android:id="@+id/edtPrice"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/product_price"
            android:inputType="number"
            android:singleLine="true"
            android:textColorHint="@color/text_hint" />

        <EditText
            android:id="@+id/edtStock"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/product_stock"
            android:inputType="number"
            android:singleLine="true"
            android:textColorHint="@color/text_hint" />

        <EditText
            android:id="@+id/edtDiscount"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/product_discount"
            android:inputType="number"
            android:singleLine="true"
            android:textColorHint="@color/text_hint" />

        <EditText
            android:id="@+id/edtDesc"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext"
            android:gravity="top|start"
            android:hint="@string/product_desc"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:textColorHint="@color/text_hint" />

        <EditText
            android:id="@+id/edtImage"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/product_image"
            android:singleLine="true"
            android:textColorHint="@color/text_hint" />
    </LinearLayout>
</ScrollView>
