<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/edtSupplierName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_edittext_admin"
            android:hint="@string/supplier_name"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtSupplierBrand"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext_admin"
            android:hint="@string/supplier_brand"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtSupplierPhone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext_admin"
            android:hint="@string/supplier_phone"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtSupplierAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext_admin"
            android:hint="@string/supplier_address"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:singleLine="true" />
    </LinearLayout>
</ScrollView>
